# contextl

./: .gitignore  api.py  build.sh  fuzz_diffs.py  fuzz_impact.py  mcp_config.txt  npm-README.md  patch_import_parser.py  print_nodes.py  pypi-README.md  test_500_diffs.py  test_all.py  test_skeleton.py  verify_all.py  verify_java.py
docs/: simple_explanation.md  technical_documentation.md
npm/: .npmignore  README.md  package.json  requirements.txt
npm/python/: graph_builder.py
pypi/: README.md  pyproject.toml
pypi/contextl/: __init__.py  __main__.py
pypi/contextl_mcp/: __main__.py
pypi/prune_mcp/: __main__.py
sample_repo/app/: layout.tsx  page.tsx
sample_repo/components/: DownloadButton.tsx  DownloadPanel.tsx  FileUploader.tsx  Footer.tsx  FooterInput.tsx  FooterLinks.tsx  UploadSection.tsx
sample_repo/lib/: api.ts  hooks.ts  upload.ts
sample_repo/types/: files.ts  user.ts
scratch/: verify_1218.py
scratch/obsidian_vault/: interfaces.go.md
src/: dead_code.py  git_review.py  graph_builder.py  impact_analysis.py  import_parser.py  installer.py  main.py  mcp_server.py  obsidian_export.py  query_engine.py  scanner.py  standalone.py
test_obsidian_java/: ganttzk-src-main-java-org-zkoss-ganttz-CommandContextualized.java.md  ganttzk-src-main-java-org-zkoss-ganttz-CommandOnTaskContextualized.java.md  ganttzk-src-main-java-org-zkoss-ganttz-DatesMapperOnInterval.java.md  ganttzk-src-main-java-org-zkoss-ganttz-DependencyComponent.java.md  ganttzk-src-main-java-org-zkoss-ganttz-DependencyList.java.md  ganttzk-src-main-java-org-zkoss-ganttz-FilterAndParentExpandedPredicates.java.md  ganttzk-src-main-java-org-zkoss-ganttz-FunctionalityExposedForExtensions.java.md  ganttzk-src-main-java-org-zkoss-ganttz-GanttPanel.java.md  ganttzk-src-main-java-org-zkoss-ganttz-IChartVisibilityChangedListener.java.md  ganttzk-src-main-java-org-zkoss-ganttz-IDatesMapper.java.md  ganttzk-src-main-java-org-zkoss-ganttz-IPredicate.java.md  ganttzk-src-main-java-org-zkoss-ganttz-LeftPane.java.md  ganttzk-src-main-java-org-zkoss-ganttz-LeftTasksTree.java.md  ganttzk-src-main-java-org-zkoss-ganttz-LeftTasksTreeRow.java.md  ganttzk-src-main-java-org-zkoss-ganttz-MilestoneComponent.java.md  ganttzk-src-main-java-org-zkoss-ganttz-Planner.java.md  ganttzk-src-main-java-org-zkoss-ganttz-ProjectStatusEnum.java.md  ganttzk-src-main-java-org-zkoss-ganttz-TabSwitcher.java.md  ganttzk-src-main-java-org-zkoss-ganttz-TabsRegistry.java.md  ganttzk-src-main-java-org-zkoss-ganttz-TaskComponent.java.md  ganttzk-src-main-java-org-zkoss-ganttz-TaskContainerComponent.java.md  ganttzk-src-main-java-org-zkoss-ganttz-TaskEditFormComposer.java.md  ganttzk-src-main-java-org-zkoss-ganttz-TaskList.java.md  ganttzk-src-main-java-org-zkoss-ganttz-TaskRow.java.md  ganttzk-src-main-java-org-zkoss-ganttz-adapters-DomainDependency.java.md  ganttzk-src-main-java-org-zkoss-ganttz-adapters-IAdapterToTaskFundamentalProperties.java.md  ganttzk-src-main-java-org-zkoss-ganttz-adapters-IDisabilityConfiguration.java.md  ganttzk-src-main-java-org-zkoss-ganttz-adapters-IDomainAndBeansMapper.java.md  ganttzk-src-main-java-org-zkoss-ganttz-adapters-IStructureNavigator.java.md  ganttzk-src-main-java-org-zkoss-ganttz-adapters-PlannerConfiguration.java.md  ganttzk-src-main-java-org-zkoss-ganttz-adapters-State.java.md  ganttzk-src-main-java-org-zkoss-ganttz-adapters-TabsConfiguration.java.md  ganttzk-src-main-java-org-zkoss-ganttz-data-ConstraintCalculator.java.md  ganttzk-src-main-java-org-zkoss-ganttz-data-DefaultFundamentalProperties.java.md  ganttzk-src-main-java-org-zkoss-ganttz-data-Dependency.java.md  ganttzk-src-main-java-org-zkoss-ganttz-data-DependencyType.java.md  ganttzk-src-main-java-org-zkoss-ganttz-data-GanttDate.java.md  ganttzk-src-main-java-org-zkoss-ganttz-data-GanttDiagramGraph.java.md  ganttzk-src-main-java-org-zkoss-ganttz-data-IDependency.java.md  ganttzk-src-main-java-org-zkoss-ganttz-data-ITaskFundamentalProperties.java.md  (+1554 more)
test_vault_web/: playwright.config.ts.md  vitest.config.ts.md
tests/: test_engine.py  test_installer.py  test_relative_imports.py  test_skeleton.py  test_tree_sitter_parser.py
tests/benchmark/: REPORT.md  (+2 more)
(+1929 files in other folders)
